[project]
name = "purchase-tracker-mcp"
version = "0.1.0"
description = "Local MCP server for tracking purchases in SQLite"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0"
]

[project.scripts]
purchase-tracker-mcp = "purchase_tracker_mcp.server:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"
